# ssg-thefan-analysis

./: .gitignore  README.html  README.md  pyproject.toml  requirements.txt
data/: 1963-2024 HHT Homeowners_Adresses.csv  1963-2024 HHT Homeowners_Adresses.xlsx  1963-2024 HHT Homeowners_Adresses_modified.xlsx  1963-2024 HHT Homeowners_Adresses_original.xlsx  2025-02-17 Contacts Fan District Association.xls  Fan District Association.geojson  Neighborhoods.csv  Parcels_434803130420322328.geodatabase  Parcels_5964925308626061370.csv  cleaned_hht_addresses.csv  cleaned_hht_homes.csv  geocoded_contacts.csv  geocoded_hht_homes.csv  hht_addresses_with_geo.csv  hht_addresses_with_geo.json
docs/: 01_Addresses_in_fan.html  01_Parcels_in_fan.html  01_parcels.html  01_setup.html  02_Contacts_in_fan.html  03_Golden_join.html  05_data.html  05_parcels.html  06_deep_look.html  06_fan_streets.html  06_heat_map.html  06_static_map.html  07-merged-parcels-and-addresses.html  10_hhc_cleaning.html  11_hhc_parsing.html  11_hht_parsing.html  20_fda_review.html  30_holiday_house_tour.html  cleaning.html  dashboard.html  data_sources.html  index.html  mini_dashboard.html  neighborhoods.html  search.json
fandu/: Interactive - 01_Addresses_in_fan.qmd.ipynb  _main.py  geo_utils.py  hht_analysis.py  mapping_utils.py  utils.py
precious/: FDA_contacts-2025-09-28.csv  National_Historic_Districts-2025-05-18.geojson  README.md
reports/: 01_Addresses_in_fan.qmd  01_Parcels_in_fan.qmd  01_setup.qmd  02_Contacts_in_fan.qmd  02_Parcels_Addresses_Join.qmd  03_Golden_join.qmd  05_data.qmd  05_parcels.qmd  06_addresses.qmd  06_deep_look.qmd  06_heat_map.qmd  06_parcel_map.qmd  06_parcel_map.quarto_ipynb  06_static_map.qmd  07-merged-parcels-and-addresses.qmd  10_hhc_cleaning.qmd  11_hhc_parsing.qmd  11_hht_parsing.qmd  20_fda_review.qmd  30_holiday_house_tour.qmd  Addresses (1).geojson:Zone.Identifier  Addresses_in_fan.csv  Addresses_in_fan.parquet  Civic_Associations (2).geojson:Zone.Identifier  Civic_Associations.geojson  Contacts_in_fda.parquet  Makefile  Neighborhoods.geojson  Neighborhoods.geojson:Zone.Identifier  ParcelAddressJoin_in_fan.parquet  Parcels_-3522506221295396307.geojson:Zone.Identifier  Parcels_in_fan.csv  (+26 more)
(+32 files in other folders)
