[project]
name = "ssg-thefan-analysis"
version = "0.1.0"
description = "Data analysis and dashboards for The Fan"
authors = [
    {name = "John Leonard",email = "john@lowkeylabs.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "ipyleaflet (>=0.19.2,<0.20.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "geo-utils (>=0.1,<0.2)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "bokeh (>=3.7.2,<4.0.0)",
    "folium (>=0.19.6,<0.20.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "ssg-wild-apricot-tools @ file:///home/john/projects/ssg-thefan-analysis/wheels/ssg_wild_apricot_tools-0.1.0-py3-none-any.whl",
    "duckdb (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "fandu" }]

[tool.poetry.scripts]
fandu = "fandu._main:cli"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

